add find method for band with test. and complete view for selecting one band at a time and adding venues.

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,31 +1,31 @@
 @{
     Layout="Shared/_Layout.cshtml";
 }
-@if(@Model["bands"].Count == 0 && @Model["venues"].Count == 0)
+
+<h2>Add a new concert</h2>
+
+<div class="row">
+    <form class="col s12" id="new-band-venue" action="/" method="post">
+
+        <div class="input-field col s12">
+            <input type="text" name="band" id="band">
+            <label for="band">Band Name</label>
+        </div>
+
+        <div class="input-field col s12">
+            <input type="text" name="venue" id="venue">
+            <label for="venue">Venue Name</label>
+        </div>
+
+        <button type="submit" class="btn btn-lg btn-info">Submit</button>
+    </form>
+</div>
+
+@foreach(var venue in @Model["venues"])
 {
-    <h2>Add a new concert</h2>
-    <div class="row">
-        <form class="col s12" id="new-band-venue" action="/" method="post">
-
-            <div class="input-field col s12">
-                <input type="text" name="band" id="band">
-                <label for="band">Band Name</label>
-            </div>
-
-            <div class="input-field col s12">
-                <input type="text" name="venue" id="venue">
-                <label for="venue">Venue Name</label>
-            </div>
-
-            <button type="submit" class="btn btn-lg btn-info">Submit</button>
-        </form>
-    </div>
-}
-else
-{
-    @foreach(var band in @Model["bands"])
+    <h4><a href="/venue/@venue.GetId()">@venue.GetName()</a></h4>
+    @foreach(var band in @venue.GetBands())
     {
-        <h2>@band.GetName()</h2>
-
+        <p><a href="/band/@band.GetId()">@band.GetName()</a></p>
     }
 }
